# Student-finaitial-management

./: .gitignore  Action.h  CMakeLists.txt  Deal.cpp  Deal.h  File.cpp  File.h  README.md  Student-finatial-management.sln  Student-finatial-management.vcxproj  Student-finatial-management.vcxproj.filters
src/: Action.cpp  Action.h  Deal.cpp  Localtime.cpp  Localtime.h  Urecord.cpp  Urecord.h  User.cpp  User.h  main_test.cpp  uinput.cpp  uinput.h
src/Analysis/: DataAnalysis.h
src/Model/: BaseDataStorage.h  FileDataStorage.cpp  FileDataStorage.h  Record.cpp  Record.h
src/Setting/: Setting.cpp  Setting.h
